--- a/task 4/LGBM.ipynb
+++ b/task 4/LGBM.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -19,17 +19,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
-    "X, y = load_data()\n",
+    "train_df = load_data()\n",
+    "transformer = DataTransformer()\n",
+    "train_df = transformer.fit_transform(train_df)\n",
+    "\n",
+    "y = train_df['SalePrice']\n",
+    "X = train_df.drop(columns='SalePrice', axis=1)\n",
+    "\n",
     "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=98987)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -48,14 +54,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'learning_rate': 0.07788642498370778, 'max_depth': 4000, 'min_child_samples': 10, 'n_estimators': 5000, 'reg_lambda': 8.723191631466182, 'subsample_freq': 5}\n"
+      "{'learning_rate': 0.09859074954616912, 'max_depth': 100, 'min_child_samples': 2, 'n_estimators': 10000, 'reg_lambda': 0.2698962582576065, 'subsample_freq': 15}\n"
      ]
     }
    ],
@@ -64,8 +70,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Evaluating on train set"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -75,21 +88,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "train RMSE: 9.196252548504313e-05\n",
-      "test RMSE: 0.010181700613181204\n"
+      "train RMSE: 0.0011844375790452304\n",
+      "test RMSE: 0.13309106169047022\n"
      ]
     }
    ],
    "source": [
     "evaluate(gs_model, X_train, y_train, \"train \")\n",
     "evaluate(gs_model, X_test, y_test, \"test \")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "RMSLE submission: 0.3837947671336009\n"
+     ]
+    }
+   ],
+   "source": [
+    "submission(transformer=transformer, gs_model=gs_model, obj_to_num=True)"
    ]
   }
  ],
