--- a/task 4/CatBoost.ipynb
+++ b/task 4/CatBoost.ipynb
@@ -2,14 +2,11 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import pandas as pd\n",
     "import numpy as np\n",
-    "import seaborn as sns\n",
-    "import os\n",
     "\n",
     "from scipy.stats import uniform, randint, loguniform\n",
     "from sklearn.metrics import mean_squared_error\n",
@@ -21,16 +18,194 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/mnt/CommonFiles/Programming/mlcourse/task 4/fit_util.py:26: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
+      "Try using .loc[row_indexer,col_indexer] = value instead\n",
+      "\n",
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "  X[c] = X[c].astype('category')\n",
+      "/mnt/CommonFiles/Programming/mlcourse/task 4/fit_util.py:26: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
+      "Try using .loc[row_indexer,col_indexer] = value instead\n",
+      "\n",
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "  X[c] = X[c].astype('category')\n",
+      "/mnt/CommonFiles/Programming/mlcourse/task 4/fit_util.py:26: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
+      "Try using .loc[row_indexer,col_indexer] = value instead\n",
+      "\n",
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "  X[c] = X[c].astype('category')\n",
+      "/mnt/CommonFiles/Programming/mlcourse/task 4/fit_util.py:26: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
+      "Try using .loc[row_indexer,col_indexer] = value instead\n",
+      "\n",
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "  X[c] = X[c].astype('category')\n",
+      "/mnt/CommonFiles/Programming/mlcourse/task 4/fit_util.py:26: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
+      "Try using .loc[row_indexer,col_indexer] = value instead\n",
+      "\n",
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "  X[c] = X[c].astype('category')\n",
+      "/mnt/CommonFiles/Programming/mlcourse/task 4/fit_util.py:26: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
+      "Try using .loc[row_indexer,col_indexer] = value instead\n",
+      "\n",
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "  X[c] = X[c].astype('category')\n",
+      "/mnt/CommonFiles/Programming/mlcourse/task 4/fit_util.py:26: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
+      "Try using .loc[row_indexer,col_indexer] = value instead\n",
+      "\n",
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "  X[c] = X[c].astype('category')\n",
+      "/mnt/CommonFiles/Programming/mlcourse/task 4/fit_util.py:26: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
+      "Try using .loc[row_indexer,col_indexer] = value instead\n",
+      "\n",
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "  X[c] = X[c].astype('category')\n",
+      "/mnt/CommonFiles/Programming/mlcourse/task 4/fit_util.py:26: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
+      "Try using .loc[row_indexer,col_indexer] = value instead\n",
+      "\n",
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "  X[c] = X[c].astype('category')\n",
+      "/mnt/CommonFiles/Programming/mlcourse/task 4/fit_util.py:26: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
+      "Try using .loc[row_indexer,col_indexer] = value instead\n",
+      "\n",
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "  X[c] = X[c].astype('category')\n",
+      "/mnt/CommonFiles/Programming/mlcourse/task 4/fit_util.py:26: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
+      "Try using .loc[row_indexer,col_indexer] = value instead\n",
+      "\n",
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "  X[c] = X[c].astype('category')\n",
+      "/mnt/CommonFiles/Programming/mlcourse/task 4/fit_util.py:26: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
+      "Try using .loc[row_indexer,col_indexer] = value instead\n",
+      "\n",
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "  X[c] = X[c].astype('category')\n",
+      "/mnt/CommonFiles/Programming/mlcourse/task 4/fit_util.py:26: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
+      "Try using .loc[row_indexer,col_indexer] = value instead\n",
+      "\n",
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "  X[c] = X[c].astype('category')\n",
+      "/mnt/CommonFiles/Programming/mlcourse/task 4/fit_util.py:26: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
+      "Try using .loc[row_indexer,col_indexer] = value instead\n",
+      "\n",
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "  X[c] = X[c].astype('category')\n",
+      "/mnt/CommonFiles/Programming/mlcourse/task 4/fit_util.py:26: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
+      "Try using .loc[row_indexer,col_indexer] = value instead\n",
+      "\n",
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "  X[c] = X[c].astype('category')\n",
+      "/mnt/CommonFiles/Programming/mlcourse/task 4/fit_util.py:26: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
+      "Try using .loc[row_indexer,col_indexer] = value instead\n",
+      "\n",
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "  X[c] = X[c].astype('category')\n",
+      "/mnt/CommonFiles/Programming/mlcourse/task 4/fit_util.py:26: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
+      "Try using .loc[row_indexer,col_indexer] = value instead\n",
+      "\n",
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "  X[c] = X[c].astype('category')\n",
+      "/mnt/CommonFiles/Programming/mlcourse/task 4/fit_util.py:26: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
+      "Try using .loc[row_indexer,col_indexer] = value instead\n",
+      "\n",
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "  X[c] = X[c].astype('category')\n",
+      "/mnt/CommonFiles/Programming/mlcourse/task 4/fit_util.py:26: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
+      "Try using .loc[row_indexer,col_indexer] = value instead\n",
+      "\n",
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "  X[c] = X[c].astype('category')\n",
+      "/mnt/CommonFiles/Programming/mlcourse/task 4/fit_util.py:26: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
+      "Try using .loc[row_indexer,col_indexer] = value instead\n",
+      "\n",
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "  X[c] = X[c].astype('category')\n",
+      "/mnt/CommonFiles/Programming/mlcourse/task 4/fit_util.py:26: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
+      "Try using .loc[row_indexer,col_indexer] = value instead\n",
+      "\n",
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "  X[c] = X[c].astype('category')\n",
+      "/mnt/CommonFiles/Programming/mlcourse/task 4/fit_util.py:26: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
+      "Try using .loc[row_indexer,col_indexer] = value instead\n",
+      "\n",
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "  X[c] = X[c].astype('category')\n",
+      "/mnt/CommonFiles/Programming/mlcourse/task 4/fit_util.py:26: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
+      "Try using .loc[row_indexer,col_indexer] = value instead\n",
+      "\n",
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "  X[c] = X[c].astype('category')\n",
+      "/mnt/CommonFiles/Programming/mlcourse/task 4/fit_util.py:26: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
+      "Try using .loc[row_indexer,col_indexer] = value instead\n",
+      "\n",
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "  X[c] = X[c].astype('category')\n",
+      "/mnt/CommonFiles/Programming/mlcourse/task 4/fit_util.py:26: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
+      "Try using .loc[row_indexer,col_indexer] = value instead\n",
+      "\n",
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "  X[c] = X[c].astype('category')\n",
+      "/mnt/CommonFiles/Programming/mlcourse/task 4/fit_util.py:26: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
+      "Try using .loc[row_indexer,col_indexer] = value instead\n",
+      "\n",
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "  X[c] = X[c].astype('category')\n",
+      "/mnt/CommonFiles/Programming/mlcourse/task 4/fit_util.py:26: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
+      "Try using .loc[row_indexer,col_indexer] = value instead\n",
+      "\n",
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "  X[c] = X[c].astype('category')\n",
+      "/mnt/CommonFiles/Programming/mlcourse/task 4/fit_util.py:26: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
+      "Try using .loc[row_indexer,col_indexer] = value instead\n",
+      "\n",
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "  X[c] = X[c].astype('category')\n"
+     ]
+    }
+   ],
    "source": [
-    "# X, y = load_data()\n",
-    "# X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=98987)\n",
+    "train_df = load_data()\n",
+    "transformer = DataTransformer()\n",
+    "train_df = transformer.fit_transform(train_df, obj_to_num=False)\n",
     "\n",
-    "train_df, target = load_data()\n",
-    "X_train = train_df.iloc[np.random.choice(np.arange(len(train_df)), 300, False)]\n",
-    "y_train = target[X_train.index]\n",
+    "y = train_df['SalePrice']\n",
+    "X = train_df.drop(columns='SalePrice', axis=1)\n",
+    "\n",
+    "X_train = X.iloc[np.random.choice(np.arange(len(X)), 300, False)]\n",
+    "y_train = y[X_train.index]\n",
     "\n",
     "cat_features = np.where(X_train.loc[:, X_train.columns.values].dtypes == \"object\")[0]\n",
     "to_categorical(X_train)"
@@ -38,7 +213,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -59,15 +234,22 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "{'depth': 2, 'l2_leaf_reg': 24.083691576022428, 'learning_rate': 0.09374616611150736, 'n_estimators': 1000}\n"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'depth': 4, 'l2_leaf_reg': 12.04252104127671, 'learning_rate': 0.05412027556607346, 'n_estimators': 7000}\n"
+      "{'depth': 2, 'l2_leaf_reg': 24.083691576022428, 'learning_rate': 0.09374616611150736, 'n_estimators': 1000}\n"
      ]
     }
    ],
@@ -77,35 +259,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
-    "X, y = load_data()\n",
+    "train_df = load_data()\n",
+    "transformer = DataTransformer()\n",
+    "train_df = transformer.fit_transform(train_df, obj_to_num=False)\n",
+    "\n",
+    "y = train_df['SalePrice']\n",
+    "X = train_df.drop(columns='SalePrice', axis=1)\n",
+    "\n",
+    "\n",
     "cat_features = np.where(X.loc[:, X.columns.values].dtypes == \"object\")[0]\n",
     "to_categorical(X)\n",
     "\n",
-    "gs_model = CatBoostRegressor(**grid_model.best_params_,\n",
+    "params = {'depth': 2, 'l2_leaf_reg': 24.083691576022428, 'learning_rate': 0.09374616611150736, 'n_estimators': 1000}\n",
+    "\n",
+    "gs_model = CatBoostRegressor(**params,\n",
     "                               task_type=\"CPU\", \n",
     "                               logging_level='Silent', \n",
     "                               random_seed=0,\n",
     "                               cat_features=cat_features)\n",
-    "\n",
     "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=98987)\n",
     "gs_model.fit(X_train, y_train);"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "RMSE: 0.001046892388252714\n",
-      "RMSE: 0.008941165645505358\n"
+      "RMSE: 0.09495450350934387\n",
+      "RMSE: 0.12314745042916674\n"
      ]
     }
    ],
@@ -113,6 +303,30 @@
     "evaluate(gs_model, X_train, y_train)\n",
     "evaluate(gs_model, X_test, y_test)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "RMSLE submission: 0.3220493808846147\n"
+     ]
+    }
+   ],
+   "source": [
+    "submission(transformer=transformer, gs_model=gs_model, obj_to_num=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
