--- a/task 4/XGBoost.ipynb
+++ b/task 4/XGBoost.ipynb
@@ -2,14 +2,11 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import pandas as pd\n",
     "import numpy as np\n",
-    "import seaborn as sns\n",
-    "import os\n",
     "\n",
     "from scipy.stats import uniform, randint, loguniform\n",
     "from sklearn.metrics import mean_squared_error\n",
@@ -21,21 +18,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# X, y = load_data()\n",
-    "# X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=98987)\n",
+    "train_df = load_data()\n",
+    "transformer = DataTransformer()\n",
+    "train_df = transformer.fit_transform(train_df)\n",
     "\n",
-    "train_df, target = load_data()\n",
-    "X_train = train_df.iloc[np.random.choice(np.arange(len(train_df)), 300, False)]\n",
-    "y_train = target[X_train.index]"
+    "y = train_df['SalePrice']\n",
+    "X = train_df.drop(columns='SalePrice', axis=1)\n",
+    "\n",
+    "X_train = X.iloc[np.random.choice(np.arange(len(X)), 300, False)]\n",
+    "y_train = y[X_train.index]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -56,14 +56,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'gamma': 0.0016045778808074773, 'lambda': 0.00036724291788078, 'learning_rate': 0.007004227601420743, 'max_depth': 185, 'min_child_weight': 19.357551391851082, 'n_estimators': 7374}\n"
+      "{'gamma': 0.0005233793595180316, 'lambda': 5.6085074951963945, 'learning_rate': 0.021792504938199782, 'max_depth': 185, 'min_child_weight': 9.653704437705056, 'n_estimators': 7374}\n"
      ]
     }
    ],
@@ -73,13 +73,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
     "gs_model = XGBRegressor(**grid_model.best_params_, seed=0)\n",
     "\n",
-    "X, y = load_data()\n",
+    "train_df = load_data()\n",
+    "transformer = DataTransformer()\n",
+    "train_df = transformer.fit_transform(train_df)\n",
+    "\n",
+    "y = train_df['SalePrice']\n",
+    "X = train_df.drop(columns='SalePrice', axis=1)\n",
+    "\n",
     "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=98987)\n",
     "\n",
     "gs_model.fit(X_train, y_train);"
@@ -87,15 +93,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "train RMSE: 0.007959740429678418\n",
-      "test RMSE: 0.01121679405869426\n"
+      "train RMSE: 0.010515217474039724\n",
+      "test RMSE: 0.12974631238370893\n"
      ]
     }
    ],
@@ -103,6 +109,30 @@
     "evaluate(gs_model, X_train, y_train, \"train \")\n",
     "evaluate(gs_model, X_test, y_test, \"test \")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "RMSLE submission: 0.38565207831952475\n"
+     ]
+    }
+   ],
+   "source": [
+    "submission(transformer=transformer, gs_model=gs_model, obj_to_num=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
