--- a/task 4/rforest.ipynb
+++ b/task 4/rforest.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -18,19 +18,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Is there nan: False\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "X, y = load_data()\n",
+    "train_df = load_data()\n",
+    "transformer = DataTransformer()\n",
+    "train_df = transformer.fit_transform(train_df)\n",
+    "\n",
+    "y = train_df['SalePrice']\n",
+    "X = train_df.drop(columns='SalePrice', axis=1)\n",
+    "\n",
     "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=98987)"
    ]
   },
@@ -90,7 +88,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'n_estimators': 10000, 'min_samples_split': 3, 'max_depth': 500}\n"
+      "{'n_estimators': 5000, 'min_samples_split': 3, 'max_depth': 200}\n"
      ]
     }
    ],
@@ -117,14 +115,31 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "train RMSE: 0.004104307372058654\n",
-      "test RMSE: 0.01092332076533353\n"
+      "train RMSE: 0.05200773885713554\n",
+      "test RMSE: 0.14306315176066298\n"
      ]
     }
    ],
    "source": [
     "evaluate(gs_model, X_train, y_train, \"train \")\n",
     "evaluate(gs_model, X_test, y_test, \"test \")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "RMSLE submission: 0.3673082030582527\n"
+     ]
+    }
+   ],
+   "source": [
+    "submission(transformer=transformer, gs_model=gs_model, obj_to_num=True)"
    ]
   }
  ],
