--- a/task 3/solution.ipynb
+++ b/task 3/solution.ipynb
@@ -162,6 +162,26 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "logreg + MinMaxScaler + pca: \n",
+      "Accuracy score: 0.9032\n"
+     ]
+    }
+   ],
+   "source": [
+    "lr_ppl_pca = make_pipeline(MinMaxScaler(), PCA(n_components=n_components, random_state=0), LogisticRegression(max_iter=1000, n_jobs=14))\n",
+    "print(\"logreg + MinMaxScaler + pca: \")\n",
+    "fit_predict(lr_ppl_pca, X, y, train_size=train_size, test_size=test_size)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -209,6 +229,26 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "svm + MinMaxScaler + pca: \n",
+      "Accuracy score: 0.8946\n"
+     ]
+    }
+   ],
+   "source": [
+    "svm_ppl_pca = make_pipeline(MinMaxScaler(), PCA(n_components=n_components, random_state=0), LinearSVC(max_iter=100000))\n",
+    "print(\"svm + MinMaxScaler + pca: \")\n",
+    "fit_predict(svm_ppl_pca, X, y, train_size=train_size, test_size=test_size)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -244,6 +284,26 @@
     "\n",
     "dt_ppl_pca = make_pipeline(StandardScaler(), PCA(n_components=n_components, random_state=0), DecisionTreeClassifier(max_depth=25))\n",
     "print(\"dt + std + pca: \")\n",
+    "fit_predict(dt_ppl_pca, X, y, train_size=train_size, test_size=test_size)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "dt + MinMaxScaler + pca: \n",
+      "Accuracy score: 0.7716\n"
+     ]
+    }
+   ],
+   "source": [
+    "dt_ppl_pca = make_pipeline(MinMaxScaler(), PCA(n_components=n_components, random_state=0), DecisionTreeClassifier(max_depth=25))\n",
+    "print(\"dt + MinMaxScaler + pca: \")\n",
     "fit_predict(dt_ppl_pca, X, y, train_size=train_size, test_size=test_size)"
    ]
   },
@@ -287,6 +347,26 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "rf + MinMaxScaler + pca: \n",
+      "Accuracy score: 0.9222\n"
+     ]
+    }
+   ],
+   "source": [
+    "rf_ppl_pca = make_pipeline(MinMaxScaler(), PCA(n_components=n_components, random_state=0), RandomForestClassifier(n_estimators=100))\n",
+    "print(\"rf + MinMaxScaler + pca: \")\n",
+    "fit_predict(rf_ppl_pca, X, y, train_size=train_size, test_size=test_size)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -326,6 +406,26 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "knn + MinMaxScaler + pca: \n",
+      "Accuracy score: 0.9494\n"
+     ]
+    }
+   ],
+   "source": [
+    "knn_ppl_pca = make_pipeline(MinMaxScaler(), PCA(n_components=n_components, random_state=0), KNeighborsClassifier(n_neighbors=10))\n",
+    "print(\"knn + MinMaxScaler + pca: \")\n",
+    "fit_predict(knn_ppl_pca, X, y, train_size=train_size, test_size=test_size)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -361,6 +461,26 @@
     "\n",
     "gc_ppl_pca = make_pipeline(StandardScaler(), PCA(n_components=n_components, random_state=0), GaussianNB())\n",
     "print(\"gc + std + pca: \")\n",
+    "fit_predict(gc_ppl_pca, X, y, train_size=train_size, test_size=test_size)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "gc + MinMaxScaler + pca: \n",
+      "Accuracy score: 0.8668\n"
+     ]
+    }
+   ],
+   "source": [
+    "gc_ppl_pca = make_pipeline(MinMaxScaler(), PCA(n_components=n_components, random_state=0), GaussianNB())\n",
+    "print(\"gc + MinMaxScaler + pca: \")\n",
     "fit_predict(gc_ppl_pca, X, y, train_size=train_size, test_size=test_size)"
    ]
   },
